force-app/main/default/objects/Grower_s_Card__c/Grower_s_Card__c.object-meta.xml
<CustomObject>
    <description>Custom Object to house Grower Card records, coming in from AGBOSS.</description>
    <label>Grower Card</label>
    <nameField>
        <label>National Grower&apos;s Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Grower Cards</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>