force-app/main/default/objects/Grower_s_Card__c/fields/Card_Type__c.field-meta.xml
<CustomField>
    <fullName>Card_Type__c</fullName>
    <description>Picklist field to house Grower Card Card Type, coming in from AGBOSS.</description>
    <label>Card Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>100% AWB</fullName>
            </value>
            <value>
                <fullName>100% NGR</fullName>
            </value>
            <value>
                <fullName>CBH</fullName>
            </value>
            <value>
                <fullName>NGR Payee ID</fullName>
            </value>
            <value>
                <fullName>S/F AWB</fullName>
            </value>
            <value>
                <fullName>S/F NGR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>