force-app/main/default/objects/Grower_s_Card__c/fields/External_Grower_Card_ID__c.field-meta.xml
<CustomField>
    <fullName>External_Grower_Card_ID__c</fullName>
    <description>Text field to house unique ID for Grower Card, coming in from AGBOSS.</description>
    <label>External Grower Card ID</label>
    <length>36</length>
    <type>Text</type>
</CustomField>