force-app/main/default/objects/Grower_s_Card__c/fields/Grower__c.field-meta.xml
<CustomField>
    <fullName>Grower__c</fullName>
    <description>Lookup field to Account to represent the Grower represented by the Grower Card, coming in from AGBOSS.</description>
    <label>Grower</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Grower Cards</relationshipLabel>
    <relationshipName>Grower_Cards</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>